#程序逻辑变更记录
2019-03-06
1.为副本恢复增加邮件报警功能
2.对关键代码进行异常邮件报警功能
3.增加deliver推送zeus功能
4.修复secondID缓存不一致问题
6.增加过滤监控磁盘分区配置

2019-03-05
1.增加报警邮件配置，主要修改报警邮件的收件人
2.增加磁盘监控 邮件报警，主要修改以下参数，这个根据运维的需求进行修改
3.修改资源选择策略，增加限定值，若超过该值则不参与写入服务,主要修改以下参数。默认为10G
4.增加任务执行异常时，发送异常邮件

2018-03-12
1.brfs代码初始化编写.