@@ -4,7 +4,15 @@
 2.对关键代码进行异常邮件报警功能
 3.增加deliver推送zeus功能
 4.修复secondID缓存不一致问题
-6.增加过滤监控磁盘分区配置
+5.增加过滤监控磁盘分区配置
+6.修复文件关闭后获取文件CRC码错误的bug
+7.修复文件的副本之间无法正常进行内容同步的bug
+8.修复文件尾长度错误的bug
+9.修复DataNode中部分文件操作在不同线程中执行导致的并发错误
+10.修复获取已关闭文件的有效长度的异常的bug
+11.添加RegionNode中的配置项，使负责关闭文件的线程个数可配置
+12.为客户端获取消息设置了超时时间
+13.为文件是否压缩添加配置项
 
 2019-03-05
 1.增加报警邮件配置，主要修改报警邮件的收件人
